Fixed url bar being too wide on mobile

--- a/website/src/global.sass
+++ b/website/src/global.sass
@@ -36,6 +36,7 @@ body
     justify-content: center
     align-items: center
     .url input
+        max-width: 100%
         user-select: none
         // background-color: rgba(#000000, 0.1)
         background-color: rgba(#000000, 0)
